Package file modified

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "Aneesh Paul",
   "license": "ISC",
   "devDependencies": {
+    "@parcel/packager-raw-url": "^2.8.3",
     "@parcel/transformer-sass": "^2.8.3",
+    "@parcel/transformer-webmanifest": "^2.8.3",
     "parcel": "^2.8.3",
     "process": "^0.11.10"
   },
